--- a/.bluemix/pipeline.yml
+++ b/.bluemix/pipeline.yml
@@ -107,4 +107,4 @@ hooks:
 - enabled: true
   label: null
   ssl_enabled: false
-  url: https://devops-api.w3ibm.bluemix.net/v1/messaging/webhook/publish
+  url: https://devops-api.ng.bluemix.net/v1/messaging/webhook/publish
